--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,16 +8,24 @@
   </head>
   <body>
     <header>
-      <h2>Web<span>Studio</span></h2>
       <nav>
+        <a href="/">Web<span>Studio</span></a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com" target="_blank"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" target="_blank">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <main>
       <section>
@@ -28,43 +36,65 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section>
-        <div>
-          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
-          </p>
-        </div>
-        <div>
-          <h3>ПУНКТУАЛЬНІСТЬ</h3>
-          <p>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
-          </p>
-        </div>
-        <div>
-          <h3>ПЛАНУВАННЯ</h3>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </div>
-        <div>
-          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
-          </p>
-        </div>
-        <h2>Чим ми займаємося</h2>
+        <h2>Наші чесноти</h2>
         <ul>
           <li>
-            <img src="./img/main-1.jpg" alt="photo1" width="370" height="294" />
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
           </li>
           <li>
-            <img src="./img/main-2.jpg" alt="photo1" width="370" height="294" />
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
           </li>
           <li>
-            <img src="./img/main-3.jpg" alt="photo1" width="370" height="294" />
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
           </li>
         </ul>
+        <section>
+          <h2>Чим ми займаємося</h2>
+          <ul>
+            <li>
+              <img
+                src="./img/main-1.jpg"
+                alt="photo1"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./img/main-2.jpg"
+                alt="photo1"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./img/main-3.jpg"
+                alt="photo1"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </section>
       </section>
       <section>
         <h2>Наша команда</h2>
@@ -77,7 +107,7 @@
               height="260"
             />
             <h3 lang="uk">Ігор Дем'яненко</h3>
-            <h4 lang="en">Product Designer</h4>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -87,7 +117,7 @@
               height="260"
             />
             <h3 lang="uk">Ольга Рєпіна</h3>
-            <h4 lang="en">Frontend Developer</h4>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -97,7 +127,7 @@
               height="260"
             />
             <h3 lang="uk">Микола Тарасов</h3>
-            <h4 lang="en">Marketing</h4>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -107,17 +137,30 @@
               height="260"
             />
             <h3 lang="uk">Михайло Єрмаков</h3>
-            <h4 lang="en">UI Designer</h4>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <h2>Web<span>Studio</span></h2>
-      <h5>м. Київ, пр-т Лесі Українки, 26</h5>
+      <a href="/">Web<span>Studio</span></a>
+
       <address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/52CHACWSyZtGmyh28" target="_blank"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@example.com" target="_blank"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" target="_blank">+38 099 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
